# 550_final_project

./: .env  README.md  finance_data.json
backend/: .gitignore  README.md  pyproject.toml
backend/backend/: database.py  main.py  models.py
backend/backend/models/: models.py  schemas.py
backend/backend/routes/: example_router.py  general_router.py  router.py  user_router.py
backend/scraping/: sec_sp500_data.csv  sec_sp500_scrape.py  wikipedia.py  yahoo_finance_data_scraper.py  yahoo_sp500_scrape.py
backend/selenium/: finance_data.json  googlefinance.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/complex/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/app/search/: advanced-search-bar.tsx  page.tsx  result-card.tsx  search-bar.tsx  search-results.tsx
frontend/app/simple/: carousel-options.tsx  carousel-query-display.tsx  results-display.tsx
frontend/components/: menubar.tsx
frontend/types/: next-auth.d.ts
frontend/utils/: api.ts
