[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kevin He <haokunkevinhe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
selenium = "^4.25.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
